--- a/avatar/templates/avatar/change.html
+++ b/avatar/templates/avatar/change.html
@@ -33,6 +33,8 @@ $(document).ready(function() {
     <div class="col-lg-12 col-md-10 col-sm-12 current-avatar">
     <p>{% trans "Your current avatar: " %}</p>
     {% avatar user %}
+    <a href="{% url 'avatar_delete' %}" class="delete-profile-image"><i class="fa fa-trash"></i></a>
+    <a href="{% url 'avatar_add' %}" class="add-profile-image"><i class="fa fa-plus"></i></a>
         </div>
     {% if not avatars %}
         <p>{% trans "You haven't uploaded an avatar yet. Please upload one now." %}</p>
