--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -1,5 +1,6 @@
 {% extends 'account/base_interface.html' %}
 {% block include_files %}
+{% load i18n avatar_tags %}
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -24,7 +25,11 @@
   <nav class="menu-config">
       <a class="perfil" onclick="window.location.href='/config/profile'"><i class="fa fa-user"></i><br>Perfil</a>
       <a class="Contraseña" onclick="window.location.href='/config/password/change/'"><i class="fa fa-lock"></i><br>Contraseña</a>
+      {% if request.user|has_avatar %}
       <a class="Contraseña" onclick="window.location.href='{% url 'avatar_change' %}'"><i class="fa fa-camera-retro"></i><br>Imagen de perfil</a>
+      {% else %}
+      <a class="Contraseña" onclick="window.location.href='{% url 'avatar_add' %}'"><i class="fa fa-camera-retro"></i><br>Imagen de perfil</a>
+      {% endif %}
   </nav>
 {% endblock %}
   <div class="col-lg-7 col-md-7 col-sm-7 wrapper-p">
