--- a/avatar/templates/avatar/add.html
+++ b/avatar/templates/avatar/add.html
@@ -17,7 +17,13 @@
 {% block cf-form %}
 <div id="change-avatar" class="col-lg-12 col-md-10 col-sm-12 current-avatar">
     <p>{% trans "Your current avatar: " %}</p>
+	{% if avatars %}
+	<a href="{% url 'avatar_change' %}">
     {% avatar user %}
+	</a>
+	{% else %}
+	{% avatar user %}
+	{% endif %}
 		<a href="{% url 'avatar_delete' %}" class="delete-profile-image"><i class="fa fa-trash"></i></a>
 </div>
     <div id="option-avatar" class="col-lg-12 col-md-12 col-sm-12 options-avatar">
