--- a/avatar/templates/avatar/confirm_delete.html
+++ b/avatar/templates/avatar/confirm_delete.html
@@ -31,13 +31,14 @@ $(document).ready(function() {
     <p>{% trans "Please select the avatars that you would like to delete." %}</p>
     {% endif %}
     {% if not avatars %}
-        {% url 'avatar_change' as avatar_change_url %}
+        {% url 'avatar_add' as avatar_change_url %}
         <p>{% blocktrans %}You have no avatars to delete. Please <a href="{{ avatar_change_url }}">upload one</a> now.{% endblocktrans %}</p>
     {% else %}
         <form method="POST" action="{% url 'avatar_delete' %}">
             <ul>
                 {{ delete_avatar_form.as_ul }}
             </ul>
+            <a href="{% url 'avatar_add' %}" class="add-profile-image"><i class="fa fa-plus"></i></a>
             <p>{% csrf_token %}<input type="submit" value="{% trans "Delete These" %}" /></p>
         </form>
     {% endif %}
