--- a/skyfolk/static/css/avatar.css
+++ b/skyfolk/static/css/avatar.css
@@ -10,6 +10,25 @@ body {
   font-family: "Open Sans", sans-serif !important;
   color: #555; }
 
+.delete-profile-image, .add-profile-image {
+  font-size: 2em; }
+  .delete-profile-image .fa-trash, .delete-profile-image .fa-plus, .add-profile-image .fa-trash, .add-profile-image .fa-plus {
+    color: #555;
+    padding: 7px;
+    -webkit-transition: all 0.2s ease-out 0s;
+    -moz-transition: all 0.2s ease-out 0s;
+    transition: all 0.2s ease-out 0s; }
+  .delete-profile-image .fa-trash, .add-profile-image .fa-trash {
+    float: left;
+    margin-left: 7px; }
+    .delete-profile-image .fa-trash:hover, .add-profile-image .fa-trash:hover {
+      color: tomato; }
+  .delete-profile-image .fa-plus, .add-profile-image .fa-plus {
+    float: right;
+    margin-right: 7px; }
+    .delete-profile-image .fa-plus:hover, .add-profile-image .fa-plus:hover {
+      color: #1e88e5; }
+
 .wrapper-p .current-avatar {
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
   min-height: 30%;
