--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -22,17 +22,19 @@
 {% block content %}
     {% block nav %}
 <div class="col-lg-12 col-md-12 col-sm-12">
-  <nav class="menu-config">
-      <a class="perfil" onclick="window.location.href='/config/profile'"><i class="fa fa-user"></i><br>Perfil</a>
-      <a class="Contraseña" onclick="window.location.href='/config/password/change/'"><i class="fa fa-lock"></i><br>Contraseña</a>
-      {% if request.user|has_avatar %}
-      <a class="Contraseña" onclick="window.location.href='{% url 'avatar_change' %}'"><i class="fa fa-camera-retro"></i><br>Imagen de perfil</a>
-      {% else %}
-      <a class="Contraseña" onclick="window.location.href='{% url 'avatar_add' %}'"><i class="fa fa-camera-retro"></i><br>Imagen de perfil</a>
-      {% endif %}
-  </nav>
+    <div class="col-lg-3 col-md-12 col-sm-12 wrapper-menu-config">
+      <nav class="menu-config">
+          <a class="perfil" onclick="window.location.href='/config/profile'"><i class="fa fa-user"></i><br>Perfil</a>
+          <a class="Contraseña" onclick="window.location.href='/config/password/change/'"><i class="fa fa-lock"></i><br>Contraseña</a>
+          {% if request.user|has_avatar %}
+          <a class="Contraseña" onclick="window.location.href='{% url 'avatar_change' %}'"><i class="fa fa-camera-retro"></i><br>Imagen de perfil</a>
+          {% else %}
+          <a class="Contraseña" onclick="window.location.href='{% url 'avatar_add' %}'"><i class="fa fa-camera-retro"></i><br>Imagen de perfil</a>
+          {% endif %}
+      </nav>
+  </div>
 {% endblock %}
-  <div class="col-lg-7 col-md-7 col-sm-7 wrapper-p">
+  <div class="col-lg-7 col-md-12 col-sm-12 wrapper-p">
     <div class="col-lg-12 col-md-12 col-sm-12 wrapper-title">
       {% block cf-title %}{% endblock %}
       {% block cf-form %}{% endblock %}
