--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -15,19 +15,17 @@ body {
   padding: 0;
   margin: 0;
   width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -1;
-  min-height: 100%; }
-  #background_cyclerimg {
+  z-index: -1; }
+  #background_cycler img {
     position: fixed;
-    left: 0;
-    top: 0;
     width: 100%;
     min-height: 100%;
     z-index: 1; }
-  #background_cyclerimg.active {
+  #background_cycler img.active {
     z-index: 3; }
 
 /* LOGO */
@@ -67,22 +65,6 @@ body {
     position: absolute;
     top: 12px;
     left: 0px; }
-
-/* Background con video */
-video#bgvid {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: -100;
-  -ms-transform: translateX(-50%) translateY(-50%);
-  -moz-transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-  background-size: cover; }
 
 .footer_base {
   width: 100%;
@@ -287,7 +269,7 @@ form {
     float: none; }
 
   #background_cycler {
-    height: 115%; }
+    height: 100%; }
 
   .footer_base {
     display: none; }
