--- a/skyfolk/static/sass/setup.sass
+++ b/skyfolk/static/sass/setup.sass
@@ -131,6 +131,54 @@ form
     color: #616161
     display: inline-block
     font-size: 1.1em
+  & button
+    background-color: #64B5F6 !important
+    position: relative
+    cursor: pointer
+    display: inline-block
+    left: 10%
+    overflow: hidden
+    -webkit-user-select: none
+    -moz-user-select: none
+    -ms-user-select: none
+    user-select: none
+    -webkit-tap-highlight-color: transparent
+    z-index: 1
+    text-decoration: none
+    color: #FFF
+    text-align: center
+    letter-spacing: 1px
+    border: none
+    border-radius: 2px
+    height: 36px
+    line-height: 36px
+    outline: 0
+    padding: 0 2rem
+    text-transform: uppercase
+  & input[type="submit"]
+    background-color: #64B5F6 !important
+    position: relative
+    cursor: pointer
+    display: inline-block
+    float: right
+    overflow: hidden
+    -webkit-user-select: none
+    -moz-user-select: none
+    -ms-user-select: none
+    user-select: none
+    -webkit-tap-highlight-color: transparent
+    z-index: 1
+    text-decoration: none
+    color: #FFF
+    text-align: center
+    letter-spacing: 1px
+    border: none
+    border-radius: 2px
+    height: 36px
+    line-height: 36px
+    outline: 0
+    padding: 0 2rem
+    text-transform: uppercase
 
 .verified
   color: #8bc34a
@@ -138,58 +186,10 @@ form
   color: tomato
 .primary
   color: #1e88e5
-button
-  background-color: #64B5F6 !important
-  position: relative
-  cursor: pointer
-  display: inline-block
-  left: 10%
-  overflow: hidden
-  -webkit-user-select: none
-  -moz-user-select: none
-  -ms-user-select: none
-  user-select: none
-  -webkit-tap-highlight-color: transparent
-  z-index: 1
-  text-decoration: none
-  color: #FFF
-  text-align: center
-  letter-spacing: 1px
-  border: none
-  border-radius: 2px
-  height: 36px
-  line-height: 36px
-  outline: 0
-  padding: 0 2rem
-  text-transform: uppercase
 
 button[name="action_add"]
   float: right !important
   left: 0
-input[type="submit"]
-  background-color: #64B5F6 !important
-  position: relative
-  cursor: pointer
-  display: inline-block
-  float: right
-  overflow: hidden
-  -webkit-user-select: none
-  -moz-user-select: none
-  -ms-user-select: none
-  user-select: none
-  -webkit-tap-highlight-color: transparent
-  z-index: 1
-  text-decoration: none
-  color: #FFF
-  text-align: center
-  letter-spacing: 1px
-  border: none
-  border-radius: 2px
-  height: 36px
-  line-height: 36px
-  outline: 0
-  padding: 0 2rem
-  text-transform: uppercase
 
 input[type="email"]:focus, button
   border-bottom: 1px solid #64B5F6 !important
