--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -1,36 +1,35 @@
 {% extends 'account/base_interface.html' %}
+
 {% block include_files %}
+    <script src="{{STATIC_URL}}js/config.js"></script>
+    <link rel="stylesheet" href="{{STATIC_URL}}css/configuracion.css" type="text/css" media="all">
+    <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css' />
+    <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
+    <link rel="stylesheet" href="{{STATIC_URL}}css/font-awesome.min.css">
+{% endblock%}
+
 {% load i18n avatar_tags %}
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script src="{{STATIC_URL}}js/configure.js"></script>
- 	<link rel="stylesheet" href="{{STATIC_URL}}css/configuracion.css" type="text/css" media="all">
-	<link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css' />
-	<link rel="stylesheet" href="{{STATIC_URL}}css/font-awesome.min.css">
+
+
     {% block title %} <title>Configuración - {{ request.user.username }}.</title> {% endblock %}
 	<!--[if IE 7]>
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome-ie7.min.css" rel="stylesheet" />
 	<![endif]-->
-	{% block additional_files %}
-	{% endblock%}
-
-</head>
-{% endblock%}
-
 
 {% block content %}
     {% block nav %}
 <div class="col-lg-12 col-md-12 col-sm-12">
     <div class="col-lg-3 col-md-12 col-sm-12 wrapper-menu-config">
       <nav class="menu-config">
-          <a class="perfil" onclick="window.location.href='/config/profile'"><i class="fa fa-user"></i><br>Perfil</a>
-          <a class="Contraseña" onclick="window.location.href='/config/password/change/'"><i class="fa fa-lock"></i><br>Contraseña</a>
+          <a id="config-profile" class="perfil" onclick="toProfile('/config/profile')"><i class="fa fa-user"></i><br>Perfil</a>
+          <a id="config-password" class="Contraseña" onclick="toProfile('/config/password/change')"><i class="fa fa-lock"></i><br>Contraseña</a>
           {% if request.user|has_avatar %}
-          <a class="Contraseña" onclick="window.location.href='{% url 'avatar_change' %}'"><i class="fa fa-camera-retro"></i><br>Imagen de perfil</a>
+          <a id="config-avatar" class="Contraseña" onclick="toProfile('{% url 'avatar_change' %}')"><i class="fa fa-camera-retro"></i><br>Imagen de perfil</a>
           {% else %}
-          <a class="Contraseña" onclick="window.location.href='{% url 'avatar_add' %}'"><i class="fa fa-camera-retro"></i><br>Imagen de perfil</a>
+          <a id="config-avatar" class="Contraseña" onclick="toProfile('{% url 'avatar_add' %}')"><i class="fa fa-camera-retro"></i><br>Imagen de perfil</a>
           {% endif %}
+          <a id="config-email" class="perfil" onclick="window.location.href='/accounts/email'"><i class="fa fa-envelope"></i><br>Email</a>
       </nav>
   </div>
 {% endblock %}
