--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -14,13 +14,9 @@
 
     {% block title %} <title>Skyfolk - Bienvenido.</title> {% endblock %}
 
-    {% block extra-js %}
-
-    {% endblock %}
+    {% block extra-js %}{% endblock %}
     <!-- bloques de estilos para cada pagina -->
-    {% block extra-css %}
-
-    {% endblock %}
+    {% block extra-css %}{% endblock %}
 
 
 
