--- a/skyfolk/static/css/cf-email.css
+++ b/skyfolk/static/css/cf-email.css
@@ -1,7 +1,8 @@
 .title-email {
   text-align: center;
   font-size: 1.6em;
-  color: grey; }
+  color: grey;
+  margin-bottom: 7px; }
 
 p {
   text-align: center; }
@@ -14,19 +15,29 @@ strong {
   font-size: 12px; }
 
 .email_list {
-  background-color: #eee;
+  background: transparent;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
   display: block;
   position: relative;
   margin-bottom: 50px;
-  margin-top: 30px; }
+  margin-top: 30px;
+  padding: 10px; }
   .email_list .buttonHolder {
     width: 100%;
     margin-top: 60px; }
   .email_list label {
     color: #616161;
     display: inline-block;
-    font-size: 1.1em; }
+    font-size: 1.4em;
+    padding: 10px;
+    width: 100%; }
+  .email_list .verified, .email_list .unverified, .email_list .primary {
+    top: 0;
+    margin-left: 10px;
+    background-color: #eee;
+    padding: 5px;
+    margin-top: auto;
+    display: inline-block; }
   .email_list .verified {
     color: #8bc34a; }
   .email_list .unverified {
@@ -40,16 +51,20 @@ strong {
   border-radius: 0;
   border-bottom: 1px solid #c9c9c9;
   color: #212121;
-  padding: 1px;
+  background: transparent;
+  padding: 5px;
   padding-bottom: 8px;
   height: auto;
   box-shadow: none;
   font-size: 13px;
   margin: 10px 0;
-  width: 100%;
+  width: 95%;
   box-sizing: border-box;
   -webkit-user-select: text; }
   .wrapper-title input[type="email"]:focus {
     border-color: #1e88e5; }
+
+button[name="action_add"], .primaryAction, .secondaryAction {
+  margin-right: 0 !important; }
 
 /*# sourceMappingURL=cf-email.css.map */
