--- a/skyfolk/static/sass/configuracion.sass
+++ b/skyfolk/static/sass/configuracion.sass
@@ -39,7 +39,6 @@ h6
 
 .wrapper-p
   margin-top: 5% !important
-  margin-left: 7% !important
   background-color: #fafafa
   padding: 10px
   border-radius: 8px
@@ -52,6 +51,7 @@ h6
 .wrapper-menu-config
   position: relative
   margin-top: 5%
+  margin-right: 60px
 .menu-config
   position: relative
   display: block
