--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -29,7 +29,7 @@
           {% else %}
           <a id="config-avatar" class="Contraseña" onclick="toProfile('{% url 'avatar_add' %}')"><i class="fa fa-camera-retro"></i><br>Imagen de perfil</a>
           {% endif %}
-          <a id="config-email" class="perfil" onclick="window.location.href='/accounts/email'"><i class="fa fa-envelope"></i><br>Email</a>
+          <a id="config-email" class="perfil" onclick="window.location.href='/config/email'"><i class="fa fa-envelope"></i><br>Email</a>
       </nav>
   </div>
 {% endblock %}
