--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -1,4 +1,5 @@
-    <nav class="box-tool">
+{% load notifications_tags %}
+<nav class="box-tool">
     <ul class="box-tool-wrapper">
       <li>
         {% include "account/menu-vertical.html" %}
@@ -16,7 +17,7 @@
          <!-- Notificaciones para skyfolk - (Botón campana) -->
         <li class="notification-bell">
           <i class="fa fa-bell fa-lg"></i>
-          <em onclick="contador()">{{n_likes}}</em>
+          <em onclick="contador()">{% live_notify_badge %}</em>
           <button type="submit" id="hover-clear-notify"><i class="fa fa-trash fa-2x"></i></button> <!-- Mostrar "borrar notificaciones" al hacer hover -->
         </li>
       {% if showPerfilButtons or user.username == user_profile.username %}
