--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -1,14 +1,9 @@
+{% load notifications_tags %}
+<script src="{{STATIC_URL}}js/notify.js" type="text/javascript"></script>
+{% register_notify_callbacks callbacks='fill_notification_list,fill_notification_badge' menu_id='notification-menu' %}
 <!-- MENU VERTICAL CON NOTIFICACIONES  -->
     <div id="notification-menu" class="col-lg-3 col-md-8 col-sm-12 nav-vertical-and-chat">
-      <div class="col-lg-12 col-md-12 col-sm-12 notification-like">
-        <div class="col-lg-2 col-md-2 col-sm-2 hexagon">
-        <i class="fa fa-heart fa-lg"></i>
-        </div>
-        <div class="col-lg-9 col-md-9 col-sm-9 notification-content">
-          <h4>¡<a>{{ request.user.username }}</a>, has recibido un me gusta!</h4>
-          <button class="fa fa-check notification-show"></button>
-        </div>
-      </div>
+        {% live_notify_list list_id='nav'%}
       <div class="col-lg-12 col-md-12 col-sm-12 nav-vertical-controls">
         <ul class="controls-notifications">
           <li class="clear-notify"><a id="clear-notify">Limpiar notificaciones</a></li>
