--- a/skyfolk/static/sass/miperfil.sass
+++ b/skyfolk/static/sass/miperfil.sass
@@ -2078,7 +2078,36 @@ ul.table > li
   font-family: 'Open Sans', sans-serif
   overflow: hidden
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
-
+  & .nav-vertical-controls
+    position: absolute
+    display: block
+    height: 120px
+    bottom: 0
+    & .controls-notifications
+      position: relative
+      list-style-type: none
+      text-align: center
+      & button
+        border: medium none
+        border-radius: 2px
+        display: inline-block
+        height: 36px
+        line-height: 36px
+        padding: 0px 2rem
+        text-transform: uppercase
+        text-decoration: none
+        background-color: #1e88e5
+        text-align: center
+        letter-spacing: 0.5px
+        transition: all 0.2s ease-out 0s
+        cursor: pointer
+        outline: none
+        font-size: 1.3em
+        & #clear-notify, #clear-notify:visited
+          color: #fefefe
+          text-decoration: none
+          &:hover
+            opacity: 0.8
   & li
     height: 110px
     margin-top: 2%
