--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -2201,6 +2201,36 @@ ul.table > li {
   font-family: "Open Sans", sans-serif;
   overflow: hidden;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15); }
+  .nav-vertical-and-chat .nav-vertical-controls {
+    position: absolute;
+    display: block;
+    height: 120px;
+    bottom: 0; }
+    .nav-vertical-and-chat .nav-vertical-controls .controls-notifications {
+      position: relative;
+      list-style-type: none;
+      text-align: center; }
+      .nav-vertical-and-chat .nav-vertical-controls .controls-notifications button {
+        border: medium none;
+        border-radius: 2px;
+        display: inline-block;
+        height: 36px;
+        line-height: 36px;
+        padding: 0px 2rem;
+        text-transform: uppercase;
+        text-decoration: none;
+        background-color: #1e88e5;
+        text-align: center;
+        letter-spacing: 0.5px;
+        transition: all 0.2s ease-out 0s;
+        cursor: pointer;
+        outline: none;
+        font-size: 1.3em; }
+        .nav-vertical-and-chat .nav-vertical-controls .controls-notifications button #clear-notify, .nav-vertical-and-chat .nav-vertical-controls .controls-notifications button #clear-notify:visited {
+          color: #fefefe;
+          text-decoration: none; }
+          .nav-vertical-and-chat .nav-vertical-controls .controls-notifications button #clear-notify:hover, .nav-vertical-and-chat .nav-vertical-controls .controls-notifications button #clear-notify:visited:hover {
+            opacity: 0.8; }
   .nav-vertical-and-chat li {
     height: 110px;
     margin-top: 2%;
