--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -1,9 +1,14 @@
 {% load notifications_tags %}
 <script src="{{STATIC_URL}}js/notify.js" type="text/javascript"></script>
-{% register_notify_callbacks callbacks='fill_notification_list,fill_notification_badge' menu_id='notification-menu' %}
+{% register_notify_callbacks callbacks='fill_notification_list,fill_notification_badge' menu_id='list-notify' %}
 <!-- MENU VERTICAL CON NOTIFICACIONES  -->
-    <div id="notification-menu" class="col-lg-3 col-md-8 col-sm-12 nav-vertical-and-chat">
-        <ul id="list-notify">
-        {% live_notify_list %}
-        </ul>
-    </div>
+<div id="notification-menu" class="col-lg-3 col-md-8 col-sm-12 nav-vertical-and-chat">
+    <ul id="list-notify">
+    {% live_notify_list %}
+    </ul>
+    <div class="col-lg-12 col-md-12 col-sm-12 nav-vertical-controls">
+        <div class="controls-notifications">
+          <button class="clear-notify"><a id="clear-notify">Limpiar notificaciones</a></button>
+      </div>
+      </div>
+</div>
