--- a/skyfolk/static/sass/privacidad.sass
+++ b/skyfolk/static/sass/privacidad.sass
@@ -37,3 +37,15 @@ $blueSkyfolk: #1e88e5
         margin-top: 10px
         font-weight: bold
 
+label[for="id_privacity"]
+  margin-bottom: 10px
+  display: inline-block
+  padding: 10px
+select
+  font-family: inherit
+  background-color: transparent
+  width: 100%
+  padding: 5px
+  color: $blueSkyfolk
+  border: none
+  border-bottom: 2px solid #eee
