--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -378,200 +378,18 @@
             <li class="tab" id="li-tab-amigos"><a href="#tab-amigos">Seguidos</a></li>
           </ul>
           <div class="unstyled content" id="hood-tabs">
-        <div id="tab-timeline">
-                    <div id="section">
-                        <div class="wrapperx">
-                        {% if isFriend == True or user.username == user_profile.username %}
-                            {% for item in timeline %}
-                            <div class="line" id="tim-{{ item.from_timeline__id }}" data-id="{{ user.pk }}">
-                                <li>
-                                    <div data-sr="wait 0.2s then scale up 30%" class="second">
-                                        {% comment %}
-                                        Eliminar si nos quedamos con django-avatar...
-                                        {% if user_profile.profile.image %}
-                                        {% else %}
-                                        <span class="acontecimiento">
-                                          <img style="border-radius: 100%; width: 100%; height:100%;" src="{{STATIC_URL}}img/nuevo.png"> </img>
-                                        </span>
-                                        {% endif %}
-                                        {% endcomment %}
-
-                                        <span class="acontecimiento">
-                                          {% avatar item.user__username %}
-                                        </span>
-                                        <span class="head"><a href="/profile/{{item.user__username}}">{{item.user__username}}</a>  <a class="fecha_" target="_blank">{{item.from_timeline__insertion_date}}</a><em></em></span>
-                                        <div id="p" class="parrafo comment">
-                                                {{ item.from_timeline__content|replace_tags_mentions|safe}}
-                                        </div>
-                                        <div class="contenidoadicional">
-                                            <!--<img src="http://archive.eusa.eu/files/News/2012/photoc-camera_w2.jpg" title="random_photo" alt="random_photo">-->
-                                        </div>
-                                        <div class="controles">
-                                            <ul>
-                                                {% if user.username == user_profile.username %}
-                                                <li class="fa fa-trash fa-lg"></li>
-                                                {% endif %}
-                                                <li class="fa fa-heart fa-lg"></li>
-                                                <li class="fa fa-tag fa-lg"></li>
-                                                <li class="fa fa-quote-left fa-lg"></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </li>
-                            </div>
-                            {% endfor %}
-                            {% else %}
-                          <div class="cmt-hidden">
-                          <h3>¡Agrega a {{user_profile.username}} para ver sus comentarios!</h3>
-                          <br>
-                          </div>
-                          {% endif %}
-                        </div>
-                    </div>
-
-            </div>
-  <div id="tab-comentarios">
-	  {% if isFriend or user.username == user_profile.username %} {% comment %} Si eres amigo o estas visitando tu propio perfil... {% endcomment %}
-  {% if publications_top15|length == 0 %} <!-- Si el usuario no tiene comentarios, proponemos uno -->
-    <div class="no-comments">
-      <span class="no-comments-text-info">¡{{ user_profile.username }} no tiene comentarios!</span>
-      <a id="compose-new-no-comments" class="no-comments-new-comment">
-        <i class="fa fa-paper-plane fa-lg"></i>
-      </a>
-    </div>
-  {% endif %}
-  {% for item in publications_top15 %}
-  <div class="wrapper" id="pub-{{item.from_publication__id}}" data-id="{{ user.pk }}">
-            <div class="box">
-            <span id="check-{{item.from_publication__id}}" class="zoom-pub"><i class="fa fa-expand fa-lg"> </i></span>
-            <!-- Check para ampliar el mensaje... -->
-                  <div class="ampliado" id="expand-{{item.from_publication__id}}">
-                      <div class="nombre_image">
-                    <ul>
-                      <li><i class="first">{{item.user__first_name}} {{item.user__last_name}}</i></li>
-                      <li><a class="name" href="/profile/{{ item.user__username }}" >{{item.user__username}}</a></li>
-                    </ul>
-                          {% comment %}
-                    {% if item.user__profile__image and item.user__profile__image|file_exists %}
-                     <img src="{{MEDIA_URL}}{{item.user__profile__image}}" alt="img" class="usr-img img-responsive"><!-- id es avatar-publication-->
-                  {% else %}
-                     <img src="{{STATIC_URL}}img/nuevo.png"  alt="img" class="usr-img img-responsive"> <!-- id es avatar-publication-->
-                  {% endif %}
-                          {% endcomment %}
-
-                          <div class="usr-img img-responsive">{% avatar item.user__username %}</div>
-                      </div>
-
-                    <div class="parrafo comment-tab">
-                    <a target="_blank">{{item.from_publication__created}}</a><br><br>
-                        {{ item.from_publication__content|replace_tags_mentions|safe }}
-                  </div>
-                  <div class="text_area">
-                      <textarea placeholder="Escribe tu mensaje..."></textarea>
-                       <div class="botones_ampliado">
-                        <button class="enviar_ampliado"><i class="fa fa-paper-plane"></i>Enviar</button>
-                        <button class="cerrar_ampliado"><i class="fa fa-close"></i><label for="check-{{item.from_publication__id}}">Cerrar</label></button>
-                        <button class="difundir_ampliado"><i class="fa fa-bullhorn"></i> Difundir mensaje</button>
-                        <button class="foto_ampliado"><i class="fa fa-paperclip"></i> Añadir archivo</button>
-                        <button class="localizacion_ampliado"><i class="fa fa-map-marker"></i> Añadir localización</button>
-                       </div>
-                  </div>
-                  </div>
-      <div class="image">
-          {% comment %}
-          Eliminar si django-avatar se establece...
-        {% if item.user__profile__image and item.user__profile__image|file_exists %}
-        <img src="{{MEDIA_URL}}{{item.user__profile__image}}" alt="img" class="usr-img img-responsive"><!-- id es avatar-publication-->
-          {% else %}
-            <img src="{{STATIC_URL}}img/nuevo.png"  alt="img" class="usr-img img-responsive"> <!-- id es avatar-publication-->
-              {% endif %}
-          {% endcomment %}
-          <div class="usr-img img-responsive">{% avatar item.user__username %}</div>
-            </div>
-</div>
-
-                <article class="articulo">
-                  <h2 class="h22"><a href="/profile/{{ item.user__username }}" >{{ item.user__username }}</a> ha publicado:  </h2>
-                    <p>Padre del comentario con ID: {{ item.from_publication__replies }}</p>
-                  <div class="parrafo comment">
-                    <a target="_blank">{{item.from_publication__created}}</a><br>
-                      <div class="wrp-comment">{{ item.from_publication__content|replace_tags_mentions|safe}}</div>
-                  </div>
-                    <div class="show-more">
-                        <a href="#">+ Mostrar más</a>
-                    </div>
-              <!-- OPCIONES DE COMENTARIOS -->
-                <div class="optiones_comentarios">
-                    <ul class="opciones">
-                        {% if user.is_authenticated and user.username == item.user__username %} <!-- Si estamos visitando un perfil que no es el nuestro -->
-                             <li title="Borrar comentario"><i class="fa fa-trash"></i></li>
-                        {% elif user.username == user_profile.username %} <!-- Si estamos visitando nuestro propio perfil -->
-                             <li title="Borrar comentario"><i class="fa fa-trash"></i></li>
-                        {% endif %}
-                        {% if item.from_publication__hates > 0 %}
-                        <li title="No me gusta" class="fa-broken-heart"><i id="fa-hate" class="fa fa-heartbeat"> {{ item.from_publication__hates }}</i></li>
-                        {% else %}
-                        <li title="No me gusta" class="fa-broken-heart"><i id="fa-hate" class="fa fa-heartbeat"></i></li>
-                        {% endif %}
-                        {% if item.from_publication__likes > 0 %}
-                            <li title="¡Me gusta!"><i id="like-heart" class="fa fa-heart"> {{ item.from_publication__likes }} </i></li>
-                        {% else %}
-                            <li title="¡Me gusta!"><i id="like-heart" class="fa fa-heart"></i></li>
-                        {% endif %}
-                       <li title="Citar"><i class="fa fa-quote-left">
-                       </i></li>
-                       <li title="Responder"><i class="fa fa-reply"></i></li>
-                       <li  title="Añadir a mi timeline"><i class="fa fa-tag"></i></li>
-                    </ul>
-                </div>
-
-                </article>
-                <div id="actual-{{item.from_publication__id}}" class="replay-actual-message">
-                  <div class="triangle-reply"></div>
-                  <textarea name="reply-textarea" rows="4" cols="50"></textarea>
-                    <button class="enviar"><i class="fa fa-paper-plane-o"></i></button>
-                </div>
-    </div>
-    {% endfor %}
-
-    {% else %}
-        <div class="cmt-hidden">
-          <h3>¡Agrega a {{user_profile.username}} para ver sus comentarios!</h3>
-            <br>
-        </div>
-    {% endif %}
-        </div>
-
-        <div id="tab-amigos">
-            <input class="search" type="search" placeholder="¿A quién buscas?" title="Search">
-            <button class="sort" data-sort="name">
-              Ordenar
-            </button>
-            <ul class="list">
-                {% for item in friends_top12 %}
-                  <li id="friend-{{item.user__id}}">
-                      {% comment %}
-                  {% if item.user__profile__image and item.user__profile__image|file_exists %}
-                     <img src="{{MEDIA_URL}}{{item.user__profile__image}}" class="usr-img img-responsive">
-                  {% else %}
-                     <img src="{{STATIC_URL}}img/nuevo.png" class="usr-img img-responsive">
-                  {% endif %}
-                      usr-img img-responsive
-                      {% endcomment %}
-                      <div class="usr-img img-responsive">{% avatar item.user__username %}</div>
-                  <a class="name" href="/profile/{{ item.user__username }}">{{item.user__first_name}} {{item.user__last_name}} ({{item.user__username}})</a>
-                  </li>
-                {% endfor %}
-            </ul>
-        </div>
-
-          </div>
-      </div>
-      </div>
-      </div>
-      </div>
-
-
+        {% comment %}
+            Incluimos el tab timeline
+        {% endcomment %}
+        {% include "account/tab-timeline.html" %}
+        {% comment %}
+            Incluimos el tab comentarios
+        {% endcomment %}
+        {% include "account/tab-comentarios.html" %}
+        {% comment %}
+            Incluimos el tab amigos
+        {% endcomment %}
+        {% include "account/tab-amigos.html" %}
     <!-- <div class="col-lg-12 col-sm-12 col-md-12"> -->
         <!-- <div class="weather card"> -->
      <!-- <div class="widget-right-down">
