--- a/skyfolk/static/css/privacidad.css
+++ b/skyfolk/static/css/privacidad.css
@@ -33,4 +33,18 @@
         margin-top: 10px;
         font-weight: bold; }
 
+label[for="id_privacity"] {
+  margin-bottom: 10px;
+  display: inline-block;
+  padding: 10px; }
+
+select {
+  font-family: inherit;
+  background-color: transparent;
+  width: 100%;
+  padding: 5px;
+  color: #1e88e5;
+  border: none;
+  border-bottom: 2px solid #eee; }
+
 /*# sourceMappingURL=privacidad.css.map */
