--- a/skyfolk/templates/account/cf-privacity.html
+++ b/skyfolk/templates/account/cf-privacity.html
@@ -34,7 +34,7 @@
 			</li>
 			<li class="col-lg-12 col-md-12 col-sm-121">
 				<h3>Nadie puede ver ni mi perfil ni mis publicaciones</h3>
-				<p>Ningún perfil puede tu perfil ni el contenido que publiques. <br><br> Esta opción es útil si quieres tener un perfil privado en el que guardar contenido útil para ti.</p>
+				<p>Ningún perfil puede ver tu perfil ni el contenido que publiques. <br><br> Esta opción es útil si quieres tener un perfil privado en el que guardar contenido útil para ti.</p>
 			</li>
 		</ul>
 	</div>
