--- a/skyfolk/templates/account/tab-amigos.html
+++ b/skyfolk/templates/account/tab-amigos.html
@@ -2,6 +2,7 @@
 {% load avatar_tags %}
 
 <div id="tab-amigos">
+    {% if privacity == 'A' or isFriend and privacity == 'OF' or user.username == user_profile.username or privacity == 'OFAF' and isFriend or isFollower and privacity == 'OFAF' %}
             <input class="search" type="search" placeholder="¿A quién buscas?" title="Search">
             <button class="sort" data-sort="name">
               Ordenar
@@ -22,4 +23,15 @@
                   </li>
                 {% endfor %}
             </ul>
+    {% elif privacity == 'OF' or privacity == 'OFAF' and isFriend == False %}
+          <div class="cmt-hidden">
+          <h3>¡Sigue a {{user_profile.username}} para ver sus comentarios!</h3>
+            <br>
+          </div>
+    {% elif privacity == 'N' %}
+        <div class="cmt-hidden">
+          <h3>¡Éste perfil es privado!</h3>
+            <br>
+        </div>
+    {% endif %}
 </div>
