+ Add margin config-privacity

--- a/skyfolk/static/sass/privacidad.sass
+++ b/skyfolk/static/sass/privacidad.sass
@@ -7,6 +7,7 @@ $blueSkyfolk: #1e88e5
   background-color: $background
   padding: 10px
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
+  margin-bottom: 20px
   & h1
     text-align: center
     font-size: 1.7em
