--- a/skyfolk/static/css/privacidad.css
+++ b/skyfolk/static/css/privacidad.css
@@ -3,7 +3,8 @@
   margin-top: 20px;
   background-color: #eee;
   padding: 10px;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15); }
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  margin-bottom: 20px; }
   .wrapper-options h1 {
     text-align: center;
     font-size: 1.7em;
